--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
         "gulp-notify": "^3.2.0",
         "gulp-plumber": "^1.2.1",
         "gulp-pretty-html": "^2.0.10",
-        "gulp-sass": "^4.1.0",
+        "gulp-sass": "^5.1.0",
         "gulp-strip-css-comments": "^2.0.0",
         "gulp-ttf2woff": "^1.1.1",
         "gulp-ttf2woff2": "^3.0.0",
         "gulp-uglify": "^3.0.2",
         "gulp-uglify-es": "^2.0.0",
-        "panini": "^1.7.1"
+        "panini": "^1.7.1",
+        "sass": "^1.69.0"
     },
     "browserslist": [
         "last 1 version",
